53-GKE-Ingress-HealthCheck-with-backendConfig/kube-manifests/01-kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-nginx-deployment
  labels:
    app: app3-nginx 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3-nginx
  template:
    metadata:
      labels:
        app: app3-nginx
    spec:
      containers:
        - name: app3-nginx
          image: stacksimplify/kubenginx:1.0.0
          ports:
            - containerPort: 80
          # Readiness Probe (https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#def_inf_hc)            
          #readinessProbe:
          #  httpGet:
          #    scheme: HTTP
          #    path: /index.html
          #    port: 80
          #  initialDelaySeconds: 10
          #  periodSeconds: 15
          #  timeoutSeconds: 5
