53-GKE-Ingress-HealthCheck-with-backendConfig/kube-manifests/02-kubernetes-NodePort-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-nginx-nodeport-service
  labels:
    app: app3-nginx
  annotations:
    #cloud.google.com/backend-config: '{"ports": {"80":"my-backendconfig"}}' 
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'     
spec:
  type: NodePort
  selector:
    app: app3-nginx
  ports:
    - port: 80
      targetPort: 80
